# core

./: .gitignore  Makefile  README.md  generate.py  pyproject.toml  requirements-test.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  setup2.py  tox.ini
example/: main.py
example/pydantic_experiments/: basemodel.py  classes.py  functools_exp.py  type_adapter.py
example/ttt/: req.py  test_req.py
example/ttt/pub/: main.py  task_main.py
local/: .gitignore  docker-compose.yml
local/postgres_init/: init.sql
src/: __init__.py
src/bbprograms/: __init__.py  models.py
src/bbprograms/domain/: __init__.py  entities.py  exceptions.py
src/bbprograms/repo/: __init__.py  repositories.py
src/bbprograms/tests/domain/: test_asset_entity.py  test_bbprogram_entity.py
src/bbprograms/use_cases/: __init__.py  use_cases.py
src/client/: README.md  __init__.py  main.py
src/client/clients/: __init__.py  crud.py  programs.py
src/client/core/: __init__.py  consts.py  models.py
src/core/: __init__.py  exceptions.py  requirements.txt
src/core/adapters/db/: __init__.py  base.py  dynamodb.py  facade.py  interface.py  postgres.py  utils.py
src/core/adapters/tests/: __init__.py  conftest.py  conftest_crtsh.py  conftest_dynamodb.py  conftest_facebook.py  conftest_postgres.py
src/core/arch/: README.md  __init__.py  entity.py  repository.py  task.py  use_case.py
src/domains/: README.md
src/domains/bugbounty_programs/: README.md
src/domains/bugbounty_programs/api/: __init__.py  exceptions.py  schema.proto  schema.py
src/domains/bugbounty_programs/domain/: __init__.py  postgres_schema.py
src/domains/bugbounty_programs/repo/: __init__.py  _asset_repository.py  _program_repository.py  asset_repository.py  program_repository.py  utils.py
src/domains/bugbounty_programs/tests/: conftest.py
src/domains/bugbounty_programs/use_cases/: __init__.py  add_asset_use_case.py  create_program_use_case.py  delete_asset_use_case.py  delete_program_use_case.py  read_program_use_case.py  remove_asset_use_case.py  update_program_use_case.py
src/domains/domains/: README.md
src/domains/domains/api/: __init__.py  exceptions.py  schema.py
src/domains/domains/domain/: __init__.py  postgres_schema.py
src/domains/domains/repo/: domain_repository.py
src/domains/domains/tests/: conftest.py  conftest_archive.py
src/domains/domains/use_cases/: __init__.py  ct_event_use_case.py  get_domains_from_certificates_use_case.py  subscribe_new_domains_use_case.py  unsubscribe_new_domains_use_case.py
src/domains/domains/utils/: __init__.py  check_domain.py  filter_domains.py
src/domains/example/: README.md  __init__.py
src/domains/example/api/: __init__.py  schema.proto  schema.py  search_filter.py
src/domains/example/domain/: __init__.py  config.py  dynamodb_schema.py  example_entity.py  exceptions.py
src/domains/example/repo/: __init__.py  example_repository.py
src/domains/example/tests/: conftest.py
src/domains/example/use_cases/: __init__.py  example_use_case.py
src/domains/facebook_api/api/: __init__.py  pem.py  schema.py
src/domains/facebook_api/repo/: domain_repository.py
src/domains/facebook_api/tests/: conftest.py
src/tasks/: __init__.py  _tasks.py  playground.py  requirements.txt  wildcard.py
src/tasks/common/: __init__.py  debug.py  giraffe.py  hello.py  ping.py
src/tasks/models/: __init__.py  domain.py  wildcard.py
src/tasks/recon/: __init__.py  _old_domain_resolve.py  domain_resolve.py  get_domains_from_certs.py
tools/: generate.py  requirements.txt
(+103 files in other folders)
