[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "asman"
version = "0.0.1"
authors = [
    { name="Petrakov Oleg", email="murami.ike@gmail.com" },
]
description = "The package with core functionality for Asman"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# use plugin: https://github.com/repo-helper/hatch-requirements-txt
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Source code" = "https://github.com/asman-go/core"
Issues = "https://github.com/asman-go/core/issues"

# dependencies
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

# optional-dependencies
[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
example = [
    "src/domains/example/requirements.txt",
]
bugbounty_programs = [
    "src/domains/bugbounty_programs/requirements.txt",
]
facebook_api = [
    "src/domains/facebook_api/requirements.txt",
]
# all = ["requirements-all.txt"]

# Кодогенерация -> мы можем запустить любую программу: https://github.com/rmorshea/hatch-build-scripts
[[tool.hatch.build.hooks.build-scripts.scripts]]
# out_dir = "."
# work_dir = "."
commands = [
    'python tools/generate.py',
]
artifacts = [
    # 'src/domains/example/api/schema_pb2.py'
]
# clean_artifacts = false
# clean_out_dir = false

[tool.hatch.build.targets.sdist]
require-runtime-dependencies = true
ignore-vcs = true
include = [
    "src/*",
    "tools/*",
]
exclude = [
    "example/*",
]

[tool.hatch.build.targets.wheel]
require-runtime-dependencies = true
ignore-vcs = true
only-include = [
    "src/core",

    "src/tasks",

    "src/domains/bugbounty_programs",
    "src/domains/example",
    "src/domains/facebook_api",
]

[tool.hatch.build.targets.wheel.sources]
"src/core" = "asman/core"
"src/tasks" = "asman/tasks"
"src/domains/bugbounty_programs" = "asman/domains/bugbounty_programs"
"src/domains/example" = "asman/domains/example"
"src/domains/facebook_api" = "asman/domains/facebook_api"

# Environments
# [tool.hatch.envs.default]
[tool.hatch.envs.example]
features = [
    # Берем зависимости из example
    "example"
]

[tool.hatch.envs.test]
dependencies = []
